# juju-verify

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: sonar.yml
.github/workflows/: full_tests.yml  functional_tests.yml  releases.yml  sonar.yml  tests.yml  tests_full.yml  tests_smoke.yml
docs/: changelog.rst  conf.py  getting-started.rst  index.rst  verifiers.rst
docs/verifiers/: ceph-mon.rst  ceph-osd.rst  neutron-gateway.rst  nova-compute.rst  ovn-central.rst
juju_verify/: __init__.py  cli.py  exceptions.py  juju_verify.py
juju_verify/utils/: __init__.py  action.py  cache.py  ceph.py  unit.py
juju_verify/verifiers/: __init__.py  base.py  ceph.py  ceph_osd.py  neutron_gateway.py  nova_compute.py  ovn_central.py  result.py
snap/: snapcraft.yaml
tests/functional/: requirements.txt  tests.yaml
tests/functional/bundles/: ceph.yaml  hacluster.yaml  nova-compute.yaml  openstack.yaml
tests/functional/bundles/overlays/: hacluster.yaml.j2
tests/functional/configure/: __init__.py  ceph.py  neutron_gateway.py
tests/functional/tests/: __init__.py  base.py  test_ceph.py  test_neutron_gateway.py  test_novacompute.py  test_ovn_central.py  tests.yaml
tests/functional/tests/bundles/: ceph.yaml  hacluster.yaml  nova-compute.yaml  openstack.yaml  ovn-central.yaml
tests/functional/tests/bundles/overlays/: ceph.yaml.j2
tests/functional/tests/configure/: ceph.py
tests/unit/: conftest.py  fixtures.py  test_cli.py  test_entrypoint.py  test_juju_verify.py  test_verifiers_base.py  test_verifiers_ceph_osd.py  test_verifiers_init.py  test_verifiers_nova_compute.py
tests/unit/utils/: test_action.py  test_cache.py  test_ceph.py  test_unit.py
tests/unit/verifiers/: test_base.py  test_ceph.py  test_ceph_osd.py  test_init.py  test_neutron_gateway.py  test_nova_compute.py  test_ovn_central.py  test_result.py
