[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:juju",
    "ignore::DeprecationWarning:asyncio",
]

[tool.flake8]
exclude = [
    "__pycache__",
    ".eggs",
    ".git",
    ".tox",
    "docs/",
]
per-file-ignores = [
    "__init__.py:F401",  # Do not report unused imports in __init__
]
application_import_names = "juju_verify"
import-order-style = "pep8"
max-line-length = 89
max-complexity = 10

[tool.black]
# no specific configuration for black, flake8 is used

[tool.isort]
line_length = 89
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true

## Ignore unsupported imports
[[tool.mypy.overrides]]
module = [
  "juju.*"
]
ignore_missing_imports = true
