[metadata]
name = juju-verify
version = 0.1
url = https://launchpad.net/juju-verify
description = Juju plugin to verify if it is safe to perform an operation on one or more units
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Canonical DevOps Centres
license = GPLv3
license_file = LICENSE.txt
classifiers =
   Development Status :: 2 - Pre-Alpha
   Environment :: Plugins
   Intended Audience :: Developers
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent
   Topic :: System :: Installation/Setup
   Topic :: Utilities
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6

[options]
include_package_data = True
packages = find:
install_requires =
    juju

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest_mock
    pytest-asyncio

devlint =
    flake8
    flake8-docstrings
    flake8-import-order
    pep8-naming
    flake8-colors
    pylint
    mypy

verify =
    twine

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    juju-verify = juju_verify:main

[aliases]
test = pytest
