[metadata]
name = juju-verify
version = 0.2
url = https://launchpad.net/juju-verify
description = Juju plugin to verify if it is safe to perform an operation on one or more units
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Canonical DevOps Centres
license = GPLv3
license_file = LICENSE.txt
classifiers =
   Development Status :: 2 - Pre-Alpha
   Environment :: Plugins
   Intended Audience :: Developers
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent
   Topic :: System :: Installation/Setup
   Topic :: Utilities
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6

[options]
include_package_data = True
python_requires = >=3.6
packages = find:
install_requires =
    juju >= 2.8.6
    packaging

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest_mock
    pytest-asyncio
    flake8
    flake8-docstrings
    flake8-import-order
    pep8-naming
    flake8-colors
    pylint
    mypy
    tox >= 3.15.0
    python-openstackclient
# NOTE (rgildein): The zaza and zaza-openstack packages were moved to tox.ini, due to
#                  the fact that Pypi no longer supports direct dependency.
#                  https://github.com/pypa/warehouse/issues/7136

verify =
    twine

docs =
    sphinx
    m2r2
    sphinxcontrib.apidoc

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    juju-verify = juju_verify:main

[aliases]
test = pytest
